<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.kycox</groupId>
	<artifactId>ladybug</artifactId>
	<version>0.5.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>${application.name}</name>
	<url>http://maven.apache.org</url>
	
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.2</version>
    </parent>

	<properties>
		<java.version>16</java.version>
		<application.name>Ladybug by Kykox</application.name>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<start-class>com.kycox.game.MainLadybug</start-class>
	</properties>

	<dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
	    <dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.22</version>
			<scope>provided</scope>
		</dependency>    
		<!-- manette xbox : https://github.com/williamahartman/Jamepad -->
	    <dependency>
	        <groupId>com.github.WilliamAHartman</groupId>
	        <artifactId>Jamepad</artifactId>
	        <version>1.3.2</version>
	    </dependency>
    </dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>**/_inWork/**/*.*</exclude>
				</excludes>
				<!--filtering>true</filtering-->
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<!-- manette xbox : https://github.com/williamahartman/Jamepad -->
	    <repository>
	        <snapshots>
	            <enabled>false</enabled>
	        </snapshots>
	        <id>central</id>
	        <name>bintray</name>
	        <url>https://jcenter.bintray.com</url>
	    </repository>
	    <repository>
	        <id>jitpack.io</id>
	        <url>https://jitpack.io</url>
	    </repository>
	</repositories>    

</project>
